# MHW-QuestLoader

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  StrackerLoader.sln  dinput8-mhw.sln  move-subspecies.py  vcpkg.json
.github/workflows/: cmake.yml
DllLoader/: CMakeLists.txt  DInput8.h  Dinput8.cpp  DllLoader.vcxproj  DllLoader.vcxproj.filters  asm.asm  dinput8.def  dllmain.cpp  hid.def  injector.def  injectordll.cpp  stdafx.cpp
MHWLoader/: CMakeLists.txt  QuestLoader.cpp  SubspeciesLoader.cpp  config.cpp  dll.h  dllmain.cpp  ghidra_export.h  loader-config.json  loader.h  loader.vcxproj  loader.vcxproj.filters  loaderdll.cpp  log.cpp  memory_patch.cpp  memory_patch.h  nativePC.h  scanmem.h  util.h
MinimalDInput8Hook/: DInput8.h  MinimalDInput8Hook.cpp  MinimalDInput8Hook.vcxproj  MinimalDInput8Hook.vcxproj.filters  dllmain.cpp  stdafx.h
Plugins/ClutchRework/: CMakeLists.txt  ClutchRework.vcxproj  dllmain.cpp
Plugins/ExamplePlugin/: ExamplePlugin.vcxproj  Plugin.sln  Plugin.vcxproj  dllmain.cpp  package-plugin.py
Plugins/ExamplePlugin/dependencies/: dinput8.lib  log.h
Plugins/MonsterLoader/: CMakeLists.txt  MonsterLoader.vcxproj  dllmain.cpp  signatures.h
Plugins/QuestLoader/: CMakeLists.txt  QuestLoader.vcxproj  dllmain.cpp  signatures.h
Plugins/Unbloat/: Plugin.vcxproj  dllmain.cpp
Plugins/Unbloat/dependencies/: loader.h  loader.lib
Plugins/dependencies/: loader.lib
Plugins/utils/: plugin-utils.h
cmake/: add_FetchContent_MakeAvailableNotAll.cmake
dinput8-mhw/: CRCBypass.cpp  ForceNativePC.cpp  QOL.cpp  QuestLoader.cpp  SubspeciesLoader.cpp  config.cpp  dinput-config.json  dinput8-mhw.vcxproj  dinput8-mhw.vcxproj.filters  dinput8.def  dll.h  dllmain.cpp  ghidra_export.h  hooks.h  log.cpp  log.h  nativePC.h  util.h
ghidra-scripts/: ExportFunctions.py  ImportFunctions.py  mh.json
move-subspecies-script/: move-subspecies.py
quest-sobj-script/: quest-sobj-script.py
scripts/: mh.json  package.py
